# anemo_sample

./: Cargo.toml  README.md  USAGE.md  rust-toolchain.toml
crates/chat-module/: Cargo.toml
crates/chat-module/src/: chat_service.rs  error.rs  lib.rs  message_handler.rs
crates/network-service/: Cargo.toml
crates/network-service/src/: anemo_impl.rs  error.rs  event_bus.rs  lib.rs  message.rs  service.rs
crates/timesync-module/: Cargo.toml
crates/timesync-module/src/: error.rs  lib.rs  message_handler.rs  timesync_service.rs
docs/: anemo_comprehensive_guide.md  router_network_guide.md
src/: advanced_example.rs  chat_service.rs  client.rs  main.rs  message.rs  network_service.rs  simple_chat.rs
