[package]
name = "anemo-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anemo = { git = "https://github.com/mystenlabs/anemo.git" }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8"
