[package]
name = "network-service"
version = "0.1.0"
edition = "2021"
description = "网络服务抽象层，提供统一的网络服务接口"

[dependencies]
# 网络库
anemo = { git = "https://github.com/mystenlabs/anemo.git" }

# 异步
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 工具
uuid = { version = "1.0", features = ["v4", "serde"] } 
once_cell = "1.21.3"
rand = "0.9.1"
